# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  cli_brain_calc.py  cli_brain_even.py  cli_brain_gcd.py  cli_brain_prime.py  cli_brain_prog.py  game_engine.py  start.py
brain_games/games/: cli_brain_calc (original).py  cli_brain_calc.py  cli_brain_even.py  cli_brain_gcd.py  cli_brain_prime.py  cli_brain_prog.py  cli_brain_progression.py  constants.py  prog_brain_calc.py  prog_brain_even.py  prog_brain_gcd.py  prog_brain_prime.py  prog_brain_progression (copy).py  prog_brain_progression.py  start.py
brain_games/games/начальные/: cli_brain_gcd (copy).py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_prog.py  brain_progression.py  start (copy).py  start.py
brain_games/scripts/исходные/: brain_calc (script original).py  brain_gcd (copy).py
