[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project Brain games"
authors = ["ilyas-r <riggit5->"]
repository = "https://github.com/IlyasRT/python-project-49"
packages = [{ include = "brain_games" },]
classifiers = ['python 3.10.12']


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]

build-backend = "poetry.core.masonry.api"
